[package]
name = "jsonld"
version = "0.1.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"

[dev-dependencies]
tokio = { version = "0.1", features = ["async-await-preview"] }
tokio-async-await = "0.1"
